--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -9,4 +9,6 @@
     <string name="choix">Un large choix de bières</string>
     <string name="fin">Téléchargement terminé.</string>
     <string name="abus">"L'abus d'alcool est dangereux pour la santé "</string>
+    <string name="soif">Avez-vous une petite soif ?</string>
+    <string name="suivre">"Suivez moi "</string>
 </resources>
